  - Removed Command: /towny farmblocks
    - Replaced with /towny allowedblocks.
  - Fix towns.ranks and nations.ranks missing from the Townyperms.yml's vital groups.
  - Fix for SQL schema and new townblock type-saving.
  - Fix support for spigot 1.18.1 enabling yaml comments by default.
    - Closes #5559.
  - Only apply the outsiders prevent pvp toggle when enabling pvp, courtesy of Warriorrrr with PR #5560.
0.97.5.5:
  - Replace some methods in TownyPerms with clearer method names.
  - Fix switch id lists not accepting item groups in the custom townblocks lists, and some switches not being added.
    - Closes #5569.
0.97.5.6:
  - Overhaul of CommentedConfiguration, adding support for old and new versions of Bukkit servers.
    - Servers not running up-to-date MC 1.18.1 implementations might see some multi-lining in their chatconfig.yml, which isn't an actual issue. 
0.97.5.7:
  - Fix redundant permission node tests in Towny command.
  - Add child nodes to towny.command.towny.top command.
    - Closes #5580.
  - New permission node: 
    - towny.command.towny.top.*
      - Child Node of towny.command.towny.top
      - Children: - towny.command.towny.top.residents
                  - towny.command.towny.top.land
                  - towny.command.towny.top.balance
  - Undo change to TownyEconomyHandler which prevented CMI working.
  - New Config Node: global_town_settings.warn_town_on_outlaw_message_cooldown_in_seconds
    - Default: "30",
    - How many seconds in between warning messages, to prevent spam.
  - Added outlawn message warning cooldown to prevent spam on servers where the outlaw warning message is turned on,
    and the outlaw teleporting warmup is not set to 0.
    - Closes #5582.
  - Add the ability to make a CommentedConfiguration from a File again.
0.97.5.8:
  - Suppress deprecated JSONReader stuff, fix javadoc building.
  - Fix ArrayIndexOutOfBoundException when using /towny top with no subcommand.